--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "symfony/translation": "5.3.7",
         "tymon/jwt-auth": " ^1.0.0-rc.2"
     },
     "require-dev": {
